# multivx-crowdfunding

./: .gitignore  Cargo.toml
.idx/: dev.nix
interactor/: Cargo.toml  state.toml
interactor/src/: interact.rs  interactor_main.rs  proxy.rs
interactor/tests/: interact_cs_tests.rs  interact_tests.rs
src/: crowdfunding.rs  crowdfunding_proxy.rs
tests/: crowdfunding_blackbox_test.rs
tests/structs/: crowdfunding_test_state.rs  mod.rs
