[package]
name = "crowdfunding"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["Müller Esposito"]

[lib]
path = "src/crowdfunding.rs"

[dependencies.multiversx-sc]
version = "0.57.0"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.57.0"

[workspace]
members = [
    ".",
    "meta",
    "interactor",
]
